Bug 1882664 - Use default pref value in JS shell when alias isn't used. r=mgaudet

This lets us use `--setpref` for prefs with a legacy alias.

It's also more consistent to use the default value from the YAML file if the alias isn't used.

clang-format added some unrelated (Wasm) changes.

Differential Revision: https://phabricator.services.mozilla.com/D203090